# pulsarrfi_nn_dummy

./: README.md  pyproject.toml
cnn/3_models_inspection/sensitivity/: BBRFI_analysis.ipynb  NBRFI_analysis.ipynb  Pulse_analysis.ipynb
examples/: tune_pipelines.ipynb
src/pulsar_analysis/: __init__.py  pipeline_methods.py  train_neural_network_model.py
tests/: test_pulsar_sa.py
unet_semantic_segmentation/: README.md  setup_config.py
unet_semantic_segmentation/examples/: pipeline_pulsar_segmentation_and_analyze.ipynb
unet_semantic_segmentation/src/: __init__.py
unet_semantic_segmentation/src/pulsar_analysis/: __init__.py  preprocessing.py  tune_parameters.py
unet_semantic_segmentation/tests/data/: payload_to_numpy_image.npy
