[project]
name = "pulsarrfi_nn_dummy"
version = "0.1"
authors = [
  { name="Tanumoy Saha", email="tanumoy.saha@HTW-Berlin.de" },
]

[build-system]
requires = [
   "setuptools",
   "wheel"
]

[tool.setuptools]
package-dir = {"" = "unet_semantic_segmentation/src/pulsar_analysis"}

build-backend = "setuptools.build_meta"
