[project]
name = "pulsar_analysis"
version = "0.2"
description = "Short description"
authors = [
    { name="Tanumoy Saha", email="tanumoy.saha@HTW-Berlin.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]